changed some sizes of some components

--- a/index.html
+++ b/index.html
@@ -110,33 +110,33 @@
             <img
               src="https://images.unsplash.com/photo-1580518324671-c2f0833a3af3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80"
               alt="Avatar"
-              class="avatar-sm border-round"
+              class="avatar-sm img-responsive border-round"
             />
 
             <img
               src="https://images.unsplash.com/photo-1580518324671-c2f0833a3af3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80"
               alt="Avatar"
-              class="avatar-md border-round"
+              class="avatar-md img-responsive border-round"
             />
 
             <img
               src="https://images.unsplash.com/photo-1580518324671-c2f0833a3af3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80"
               alt="Avatar"
-              class="avatar-lg border-round"
+              class="avatar-lg img-responsive border-round"
             />
 
             <img
               src="https://images.unsplash.com/photo-1580518324671-c2f0833a3af3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80"
               alt="Avatar"
-              class="avatar-x-l border-round"
+              class="avatar-x-l img-responsive border-round"
             />
           </div>
           <div class="code-snippet centered-row">
             <iframe
-              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=vscode&wt=sharp&l=htmlmixed&width=803.5&ds=false&dsyoff=20px&dsblur=81px&wc=true&wa=false&pv=36px&ph=51px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cimg%2520src%253D%2522your_image-link%2522%2520alt%253D%2522Avatar-small%2522%2520class%253D%2522avatar-sm%2520border-round%2522%252F%253E%250A%253Cimg%2520src%253D%2522your_image-link%2522%2520alt%253D%2522Avatar-small%2522%2520class%253D%2522avatar-md%2520border-round%2522%252F%253E%250A%253Cimg%2520src%253D%2522your_image-link%2522%2520alt%253D%2522Avatar-small%2522%2520class%253D%2522avatar-lg%2520border-round%2522%252F%253E%250A%253Cimg%2520src%253D%2522your_image-link%2522%2520alt%253D%2522Avatar-small%2522%2520class%253D%2522avatar-x-l%2520border-round%2522%252F%253E"
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=vscode&wt=sharp&l=htmlmixed&width=810.25&ds=false&dsyoff=20px&dsblur=81px&wc=true&wa=false&pv=36px&ph=51px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cimg%2520src%253D%2522your_image-link%2522%2520alt%253D%2522Avatar-small%2522%2520class%253D%2522avatar-sm%2520img-responsive%2520border-round%2522%252F%253E%250A%253Cimg%2520src%253D%2522your_image-link%2522%2520alt%253D%2522Avatar-small%2522%2520class%253D%2522avatar-md%2520img-responsive%2520border-round%2522%252F%253E%250A%253Cimg%2520src%253D%2522your_image-link%2522%2520alt%253D%2522Avatar-small%2522%2520class%253D%2522avatar-lg%2520img-responsive%2520border-round%2522%252F%253E%250A%253Cimg%2520src%253D%2522your_image-link%2522%2520alt%253D%2522Avatar-small%2522%2520class%253D%2522avatar-x-l%2520img-responsive%2520border-round%2522%252F%253E"
               style="
-                width: 803px;
-                height: 203px;
+                width: 810px;
+                height: 278px;
                 border: 0;
                 transform: scale(1);
                 overflow: hidden;
@@ -153,38 +153,39 @@
           <h3 class="heading-3 t-c-3">Alert Component</h3>
           <div class="centered-row space-around-row component-border p-4">
             <div
-              class="alert alert-red p-h-2 m-4 round-corner box-shadow-light"
+              class="alert alert-red p-h-4 m-4 round-corner box-shadow-light"
             >
-              <span><i class="fas fa-exclamation-circle alert-icon"></i></span>
-              <p class="p-h-2">There was an error processing your request</p>
+              <span><i class="fas fa-exclamation-circle f-6"></i></span>
+              <p class="p-h-4 f-6">
+                There was an error processing your request
+              </p>
             </div>
 
             <div
-              class="alert alert-success p-h-2 m-4 round-corner box-shadow-light"
+              class="alert alert-success p-h-4 m-4 round-corner box-shadow-light"
             >
-              <span><i class="fas fa-check alert-icon"></i></span>
-              <p class="p-h-2">Item added to cart : checkout now!</p>
+              <span><i class="fas fa-check f-6"></i></span>
+              <p class="p-h-4 f-6">Item added to cart : checkout now!</p>
             </div>
 
             <div
-              class="alert alert-info p-h-2 m-4 round-corner box-shadow-light"
+              class="alert alert-info p-h-4 m-4 round-corner box-shadow-light"
             >
-              <span><i class="fas fa-info-circle alert-icon"></i></span>
-              <p class="p-h-2">You will now recieve my newsletter.</p>
+              <span><i class="fas fa-info-circle f-6"></i></span>
+              <p class="p-h-4 f-6">You will now recieve my newsletter.</p>
             </div>
           </div>
           <div class="code-snippet centered-row">
             <iframe
-              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=vscode&wt=sharp&l=htmlmixed&width=788.5&ds=false&dsyoff=20px&dsblur=81px&wc=true&wa=false&pv=36px&ph=51px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522alert%2520alert-red%2520p-h-2%2520m-4%2520round-corner%2520box-shadow-light%2522%253E%250A%253Cspan%253E%253Ci%2520class%253D%2522fas%2520fa-exclamation-circle%2520alert-icon%2522%253E%253C%252Fi%253E%253C%252Fspan%253E%250A%253Cp%2520class%253D%2522p-h-2%2522%253EThere%2520was%2520an%2520error%2520processing%2520your%2520request%253C%252Fp%253E%250A%253C%252Fdiv%253E%250A%250A%253Cdiv%2520class%253D%2522alert%2520alert-success%2520p-h-2%2520m-4%2520round-corner%2520box-shadow-light%2522%253E%250A%253Cspan%253E%253Ci%2520class%253D%2522fas%2520fa-check%2520alert-icon%2522%253E%253C%252Fi%253E%253C%252Fspan%253E%250A%253Cp%2520class%253D%2522p-h-2%2522%253EItem%2520added%2520to%2520cart%2520%253A%2520checkout%2520now%21%253C%252Fp%253E%250A%253C%252Fdiv%253E%250A%250A%253Cdiv%2520class%253D%2522alert%2520alert-info%2520p-h-2%2520m-4%2520round-corner%2520box-shadow-light%2522%253E%250A%253Cspan%253E%253Ci%2520class%253D%2522fas%2520fa-check%2520alert-icon%2522%253E%253C%252Fi%253E%253C%252Fspan%253E%250A%253Cp%2520class%253D%2522p-h-2%2522%253EYou%2520will%2520now%2520recieve%2520my%2520newsletter%253C%252Fp%253E%250A%253C%252Fdiv%253E"
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=vscode&wt=sharp&l=htmlmixed&width=810.25&ds=false&dsyoff=20px&dsblur=81px&wc=true&wa=false&pv=36px&ph=51px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522alert%2520alert-red%2520p-h-2%2520m-4%2520round-corner%2520box-shadow-light%2522%253E%250A%253Cspan%253E%253Ci%2520class%253D%2522fas%2520fa-exclamation-circle%2520alert-icon%2520f-6%2522%253E%253C%252Fi%253E%253C%252Fspan%253E%250A%253Cp%2520class%253D%2522p-h-2%2520f-6%2522%253EThere%2520was%2520an%2520error%2520processing%2520your%2520request%253C%252Fp%253E%250A%253C%252Fdiv%253E%250A%250A%253Cdiv%2520class%253D%2522alert%2520alert-success%2520p-h-2%2520m-4%2520round-corner%2520box-shadow-light%2522%253E%250A%253Cspan%253E%253Ci%2520class%253D%2522fas%2520fa-check%2520alert-icon%2520f-6%2522%253E%253C%252Fi%253E%253C%252Fspan%253E%250A%253Cp%2520class%253D%2522p-h-2%2520f-6%2522%253EItem%2520added%2520to%2520cart%2520%253A%2520checkout%2520now%21%253C%252Fp%253E%250A%253C%252Fdiv%253E%250A%250A%253Cdiv%2520class%253D%2522alert%2520alert-info%2520p-h-2%2520m-4%2520round-corner%2520box-shadow-light%2522%253E%250A%253Cspan%253E%253Ci%2520class%253D%2522fas%2520fa-check%2520alert-icon%2520f-6%2522%253E%253C%252Fi%253E%253C%252Fspan%253E%250A%253Cp%2520class%253D%2522p-h-2%2520f-6%2522%253EYou%2520will%2520now%2520recieve%2520my%2520newsletter%253C%252Fp%253E%250A%253C%252Fdiv%253E"
               style="
-                width: 789px;
+                width: 810px;
                 height: 390px;
                 border: 0;
                 transform: scale(1);
                 overflow: hidden;
               "
               sandbox="allow-scripts allow-same-origin"
-              scrolling="no"
             >
             </iframe>
           </div>
@@ -199,7 +200,7 @@
               <img
                 src="https://images.unsplash.com/photo-1580518324671-c2f0833a3af3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80"
                 alt="Avatar"
-                class="avatar-md border-round m-3"
+                class="avatar-md img-responsive border-round m-3"
               />
               <div class="badge-avatar badge-avatar-red border-round"></div>
             </div>
@@ -208,7 +209,7 @@
               <img
                 src="https://images.unsplash.com/photo-1580518324671-c2f0833a3af3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80"
                 alt="Avatar"
-                class="avatar-md border-round m-3"
+                class="avatar-md img-responsive border-round m-3"
               />
               <div class="badge-avatar badge-avatar-green border-round"></div>
             </div>
@@ -217,7 +218,7 @@
               <img
                 src="https://images.unsplash.com/photo-1580518324671-c2f0833a3af3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80"
                 alt="Avatar"
-                class="avatar-md border-round m-3"
+                class="avatar-md img-responsive border-round m-3"
               />
               <div class="badge-avatar badge-avatar-grey border-round"></div>
             </div>
@@ -245,9 +246,9 @@
           </div>
           <div class="code-snippet centered-row">
             <iframe
-              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=vscode&wt=sharp&l=htmlmixed&width=788.5&ds=false&dsyoff=20px&dsblur=81px&wc=true&wa=false&pv=36px&ph=51px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522badge-wrapper%2522%253E%250A%253Cimg%2520src%253D%27your_image-link%27%2520alt%253D%2522Avatar%2522%2520class%253D%2522avatar-md%2520border-round%2520m-3%2522%252F%253E%250A%253Cdiv%2520class%253D%2522badge-avatar%2520badge-avatar-red%2520border-round%2522%253E%253C%252Fdiv%253E%250A%253C%252Fdiv%253E%250A%250A%253Cdiv%2520class%253D%2522badge-wrapper%2522%253E%250A%253Cimg%2520src%253D%27your_image-link%27%2520alt%253D%2522Avatar%2522%2520class%253D%2522avatar-md%2520border-round%2520m-3%2522%252F%253E%250A%253Cdiv%2520class%253D%2522badge-avatar%2520badge-avatar-green%2520border-round%2522%253E%253C%252Fdiv%253E%250A%253C%252Fdiv%253E%250A%250A%253Cdiv%2520class%253D%2522badge-wrapper%2522%253E%250A%253Cimg%2520src%253D%27your_image-link%27%2520alt%253D%2522Avatar%2522%2520class%253D%2522avatar-md%2520border-round%2520m-3%2522%252F%253E%250A%253Cdiv%2520class%253D%2522badge-avatar%2520badge-avatar-grey%2520border-round%2522%253E%253C%252Fdiv%253E%250A%253C%252Fdiv%253E%250A%250A%253Cdiv%2520class%253D%2522badge-wrapper%2522%253E%250A%253Cspan%2520class%253D%2522badge-icon%2520f-8%2520m-2%2522%253E%250A%253Ci%2520class%253D%2522fas%2520fa-home%2522%253E%253C%252Fi%253E%250A%253C%252Fspan%253E%250A%253Cdiv%2520class%253D%2522badge%2520centered-row%2522%253E3%253C%252Fdiv%253E%250A%253C%252Fdiv%253E%250A"
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=vscode&wt=sharp&l=htmlmixed&width=810.25&ds=false&dsyoff=20px&dsblur=81px&wc=true&wa=false&pv=36px&ph=51px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522badge-wrapper%2522%253E%250A%253Cimg%2520src%253D%27your_image-link%27%2520alt%253D%2522Avatar%2522%2520class%253D%2522avatar-md%2520img-responsive%2520border-round%2520m-3%2522%252F%253E%250A%253Cdiv%2520class%253D%2522badge-avatar%2520badge-avatar-red%2520border-round%2522%253E%253C%252Fdiv%253E%250A%253C%252Fdiv%253E%250A%250A%253Cdiv%2520class%253D%2522badge-wrapper%2522%253E%250A%253Cimg%2520src%253D%27your_image-link%27%2520alt%253D%2522Avatar%2522%2520class%253D%2522avatar-md%2520img-responsive%2520border-round%2520m-3%2522%252F%253E%250A%253Cdiv%2520class%253D%2522badge-avatar%2520badge-avatar-green%2520border-round%2522%253E%253C%252Fdiv%253E%250A%253C%252Fdiv%253E%250A%250A%253Cdiv%2520class%253D%2522badge-wrapper%2522%253E%250A%253Cimg%2520src%253D%27your_image-link%27%2520alt%253D%2522Avatar%2522%2520class%253D%2522avatar-md%2520img-responsive%2520border-round%2520m-3%2522%252F%253E%250A%253Cdiv%2520class%253D%2522badge-avatar%2520badge-avatar-grey%2520border-round%2522%253E%253C%252Fdiv%253E%250A%253C%252Fdiv%253E%250A%250A%253Cdiv%2520class%253D%2522badge-wrapper%2522%253E%250A%253Cspan%2520class%253D%2522badge-icon%2520f-8%2520m-2%2522%253E%250A%253Ci%2520class%253D%2522fas%2520fa-home%2522%253E%253C%252Fi%253E%250A%253C%252Fspan%253E%250A%253Cdiv%2520class%253D%2522badge%2520centered-row%2522%253E3%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
               style="
-                width: 789px;
+                width: 810px;
                 height: auto;
                 border: 0;
                 transform: scale(1);
@@ -266,7 +267,7 @@
             <button class="btn btn-primary m-h-3 t-c-1">Default</button>
             <button class="btn btn-accent m-h-3 t-c-1">Accent</button>
             <button class="btn btn-danger m-h-3 t-c-1">Danger</button>
-            <button class="btn outline-danger m-h-3 t-c-2">Danger</button>
+            <button class="btn outline-danger m-h-3 t-c-2">outline</button>
             <button class="btn btn-pill f-4 btn-accent m-h-3 t-c-1">
               Pill
             </button>
@@ -452,31 +453,30 @@
               <img
                 src="https://picsum.photos/seed/picsum/300/200"
                 alt="responsive-image"
-                class="responsive-image"
+                class="img-responsive"
               />
             </div>
 
             <!-- round corner -->
             <div class="image-container">
               <img
-                src="https://picsum.photos/seed/picsum/300/200"
-                alt="responsive-image"
-                class="responsive-image round-corner"
+                src="https://picsum.photos/seed/picsum/200/200"
+                alt="img-responsive"
+                class="responsive-image border-round"
               />
             </div>
           </div>
           <div class="code-snippet centered-row">
             <iframe
-              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=vscode&wt=sharp&l=htmlmixed&width=788.5&ds=false&dsyoff=20px&dsblur=81px&wc=true&wa=false&pv=36px&ph=51px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522image-container%2522%253E%250A%253Cimg%250Asrc%253D%2522https%253A%252F%252Fpicsum.photos%252Fseed%252Fpicsum%252F300%252F200%2522%250Aalt%253D%2522responsive-image%2522%250Aclass%253D%2522responsive-image%2522%250A%252F%253E%250A%253C%252Fdiv%253E%250A%250A%253C%21--%2520round%2520corner%2520--%253E%250A%253Cdiv%2520class%253D%2522image-container%2522%253E%250A%253Cimg%250Asrc%253D%2522https%253A%252F%252Fpicsum.photos%252Fseed%252Fpicsum%252F300%252F200%2522%250Aalt%253D%2522responsive-image%2522%250Aclass%253D%2522responsive-image%2520round-corner%2522%250A%252F%253E%250A%253C%252Fdiv%253E"
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=vscode&wt=sharp&l=htmlmixed&width=810.25&ds=false&dsyoff=20px&dsblur=81px&wc=true&wa=false&pv=36px&ph=51px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522image-container%2522%253E%250A%253Cimg%250Asrc%253D%2522https%253A%252F%252Fpicsum.photos%252Fseed%252Fpicsum%252F300%252F200%2522%250Aalt%253D%2522responsive-image%2522%250Aclass%253D%2522img-responsive%2522%250A%252F%253E%250A%253C%252Fdiv%253E%250A%250A%253C%21--%2520rounded%2520image%2520--%253E%250A%253Cdiv%2520class%253D%2522image-container%2522%253E%250A%253Cimg%250Asrc%253D%2522https%253A%252F%252Fpicsum.photos%252Fseed%252Fpicsum%252F200%252F200%2522%250Aalt%253D%2522responsive-image%2522%250Aclass%253D%2522img-responsive%2520round-corner%2522%250A%252F%253E%250A%253C%252Fdiv%253E"
               style="
-                width: 789px;
+                width: 810px;
                 height: 427px;
                 border: 0;
                 transform: scale(1);
                 overflow: hidden;
               "
               sandbox="allow-scripts allow-same-origin"
-              scrolling="no"
             >
             </iframe>
           </div>
