--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
           <div class="centered-row space-around-row component-border p-4">
             <div class="image-container">
               <img
-                src="https://picsum.photos/seed/picsum/300/200"
+                src="https://picsum.photos/seed/picsum/200/200"
                 alt="responsive-image"
                 class="img-responsive"
               />
@@ -462,7 +462,7 @@
               <img
                 src="https://picsum.photos/seed/picsum/200/200"
                 alt="img-responsive"
-                class="responsive-image border-round"
+                class="img-responsive border-round"
               />
             </div>
           </div>
