added text utility classes

--- a/index.html
+++ b/index.html
@@ -588,6 +588,38 @@
             </iframe>
           </div>
         </section>
+        <section id="text-utils">
+          <h3 class="heading-3 t-c-3">Text Utilities</h3>
+          <div class="centered-row space-around-row component-border p-4 m-v-4">
+            <h3 class="heading-3 t-c-3">Headings</h3>
+            <p class="heading-1">Heading-1</p>
+            <p class="heading-2">Heading-2</p>
+            <p class="heading-3">Heading-3</p>
+          </div>
+          <div class="code-snippet centered-row">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=vscode&wt=sharp&l=htmlmixed&width=809.75&ds=false&dsyoff=20px&dsblur=81px&wc=true&wa=false&pv=36px&ph=51px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cp%2520class%253D%2522heading-1%2522%253EHeading-1%253C%252Fp%253E%250A%253Cp%2520class%253D%2522heading-2%2522%253EHeading-2%253C%252Fp%253E%250A%253Cp%2520class%253D%2522heading-3%2522%253EHeading-3%253C%252Fp%253E"
+              style="
+                width: 810px;
+                height: 185px;
+                border: 0;
+                transform: scale(1);
+                overflow: hidden;
+              "
+              sandbox="allow-scripts allow-same-origin"
+              scrolling="no"
+            >
+            </iframe>
+          </div>
+          <div class="component-border p-4 m-v-4">
+            <h3 class="heading-4 t-c-3">Peragaraph text</h3>
+            <div class="centered-row space-around-row">
+              <p class="t-c-2 f-7">Grey Text</p>
+              <p class="center-text f-7 t-c-4">Center text</p>
+              <p class="line-through f-7 t-c-2">Line Through Text</p>
+            </div>
+          </div>
+        </section>
       </div>
     </div>
     <script src="script.js"></script>
