added code snippet

--- a/index.html
+++ b/index.html
@@ -619,6 +619,21 @@
               <p class="line-through f-7 t-c-2">Line Through Text</p>
             </div>
           </div>
+          <div class="code-snippet centered-row">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=vscode&wt=sharp&l=htmlmixed&width=809.75&ds=false&dsyoff=20px&dsblur=81px&wc=true&wa=false&pv=36px&ph=51px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cp%2520class%253D%2522t-c-2%2520f-7%2522%253EGrey%2520Text%253C%252Fp%253E%250A%253Cp%2520class%253D%2522center-text%2520f-7%2520t-c-4%2522%253ECenter%2520text%253C%252Fp%253E%250A%253Cp%2520class%253D%2522line-through%2520f-7%2520t-c-2%2522%253ELine%2520Through%2520Text%253C%252Fp%253E"
+              style="
+                width: 810px;
+                height: 185px;
+                border: 0;
+                transform: scale(1);
+                overflow: hidden;
+              "
+              sandbox="allow-scripts allow-same-origin"
+              scrolling="no"
+            >
+            </iframe>
+          </div>
         </section>
       </div>
     </div>
