fix : scroll bar

--- a/index.html
+++ b/index.html
@@ -63,6 +63,17 @@
           <li class="nav-text"><a class="nav-links" href="#card">Cards</a></li>
           <li class="nav-text"><a class="nav-links" href="#image">Image</a></li>
           <li class="nav-text"><a class="nav-links" href="#input">Input</a></li>
+          <li class="nav-text"><a class="nav-links" href="#input">Input</a></li>
+          <li class="nav-text">
+            <a class="nav-links" href="#text-utils">Text Utils</a>
+          </li>
+          <li class="nav-text"><a class="nav-links" href="#lists">Lists</a></li>
+          <li class="nav-text"><a class="nav-links" href="#lists">Lists</a></li>
+          <li class="nav-text"><a class="nav-links" href="#lists">Lists</a></li>
+          <li class="nav-text"><a class="nav-links" href="#lists">Lists</a></li>
+          <li class="nav-text"><a class="nav-links" href="#lists">Lists</a></li>
+          <li class="nav-text"><a class="nav-links" href="#lists">Lists</a></li>
+          <li class="nav-text"><a class="nav-links" href="#lists">Lists</a></li>
         </ul>
       </aside>
 
