added code snippet

--- a/index.html
+++ b/index.html
@@ -748,6 +748,20 @@
               </nav>
             </header>
           </div>
+          <div class="code-snippet centered-row">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=vscode&wt=sharp&l=htmlmixed&width=429&ds=false&dsyoff=20px&dsblur=81px&wc=true&wa=true&pv=65px&ph=38px&ln=false&fl=1&fm=Hack&fs=14px&lh=111%25&si=false&es=2x&wm=false&code=%253Cheader%2520class%253D%2522main-head%2522%253E%250A%253Cnav%2520class%253D%2522nav-component%2522%253E%250A%253Cdiv%2520class%253D%2522logo-wrapper%2522%253E%250A%253Cspan%2520class%253D%2522hamburger-icon%2522%250A%253E%253Ci%2520class%253D%2522fa%2520fa-bars%2520f-6%2520p-h-4%2522%253E%253C%252Fi%250A%253E%253C%252Fspan%253E%250A%253Ch1%2520class%253D%2522nav-logo%2520heading-4%2520p-h-2%2522%253EEcommerce%2520Store%253C%252Fh1%253E%250A%253C%252Fdiv%253E%250A%253Cdiv%2520class%253D%2522nav-searchBar-container%2522%253E%250A%253Cspan%2520class%253D%2522nav-searchIcon%2522%250A%253E%253Ci%2520class%253D%2522fa%2520fa-search%2520f-5%2520t-c-3%2522%253E%253C%252Fi%250A%253E%253C%252Fspan%253E%250A%253Cinput%250Atype%253D%2522text%2522%250Aclass%253D%2522p-v-3%2520nav-searchBar%2522%250Aplaceholder%253D%2522Search%2520Items...%2522%250A%252F%253E%250A%253C%252Fdiv%253E%250A%253Cdiv%2520class%253D%2522link-wrapper%2522%253E%250A%253Ca%2520class%253D%2522t-c-1%2520f-5%2520p-v-3%2520p-h-8%2520m-h-3%2520nav-link-button%2522%250A%253ESign%2520in%253C%252Fa%250A%253E%250A%253Cdiv%2520class%253D%2522badge-wrapper%2520p-h-4%2520m-h-3%2522%253E%250A%253Cspan%2520class%253D%2522badge-icon%2520f-8%2520m-2%2522%253E%250A%253Ci%2520class%253D%2522fa%2520fa-heart%2522%253E%253C%252Fi%253E%250A%253C%252Fspan%253E%250A%253Cdiv%2520class%253D%2522badge%2520centered-row%2522%253E3%253C%252Fdiv%253E%250A%253C%252Fdiv%253E%250A%253Cspan%2520class%253D%2522f-7%2520p-h-1%2520pointer%2522%253EWishlist%253C%252Fspan%253E%250A%253Cdiv%2520class%253D%2522badge-wrapper%2520p-h-4%2520m-h-3%2522%253E%250A%253Cspan%2520class%253D%2522badge-icon%2520f-8%2520m-2%2522%253E%250A%253Ci%2520class%253D%2522fa%2520fa-shopping-cart%2522%253E%253C%252Fi%253E%250A%253C%252Fspan%253E%250A%253Cdiv%2520class%253D%2522badge%2520centered-row%2522%253E3%253C%252Fdiv%253E%250A%253C%252Fdiv%253E%250A%253Cspan%2520class%253D%2522f-7%2520p-h-1%2520pointer%2522%253ECart%253C%252Fspan%253E%250A%253C%252Fdiv%253E%250A%253C%252Fnav%253E%250A%253C%252Fheader%253E"
+              style="
+                width: 100%;
+                height: 400px;
+                border: 0;
+                transform: scale(1);
+                overflow: hidden;
+              "
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
         </section>
       </div>
     </div>
