Fix : fixed z-index issue

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <!-- navbar -->
     <div class="grid-container">
-      <header class="navbar">
+      <header class="navbar z-index-lg p-h-6">
         <div class="logo-click rotate">
           <object
             id="logo"
@@ -44,7 +44,7 @@
         </nav>
       </header>
 
-      <aside class="nav-menu active box-shadow-right">
+      <aside class="nav-menu active box-shadow-right z-index-md">
         <ul class="nav-menu-items">
           <li class="nav-text">
             <a class="nav-links" href="#getting-started">Getting Started</a>
@@ -96,7 +96,7 @@
               section of your HTML page.
             </p>
 
-            <div className="code-snippet">
+            <div className="code-snippet centered-row ">
               <iframe
                 src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=vscode&wt=sharp&l=htmlmixed&width=764&ds=false&dsyoff=20px&dsblur=81px&wc=true&wa=true&pv=36px&ph=51px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Clink%2520rel%253D%2522stylesheet%2522%2520href%253D%2522https%253A%252F%252Fcerebrumui.netlify.app%252Fcerebrum.css%2522%2520%252F%253E"
                 style="
@@ -107,6 +107,7 @@
                   overflow: hidden;
                 "
                 sandbox="allow-scripts allow-same-origin"
+                scrolling="no"
               >
               </iframe>
             </div>
