--- a/index.html
+++ b/index.html
@@ -50,9 +50,6 @@
             <a class="nav-links" href="#getting-started">Getting Started</a>
           </li>
           <li class="nav-text">
-            <a class="nav-links" href="#">Alert</a>
-          </li>
-          <li class="nav-text">
             <a class="nav-links" href="#avatar">Avatar</a>
           </li>
           <li class="nav-text"><a class="nav-links" href="#alert">Alert</a></li>
@@ -63,17 +60,16 @@
           <li class="nav-text"><a class="nav-links" href="#card">Cards</a></li>
           <li class="nav-text"><a class="nav-links" href="#image">Image</a></li>
           <li class="nav-text"><a class="nav-links" href="#input">Input</a></li>
-          <li class="nav-text"><a class="nav-links" href="#input">Input</a></li>
           <li class="nav-text">
             <a class="nav-links" href="#text-utils">Text Utils</a>
           </li>
           <li class="nav-text"><a class="nav-links" href="#lists">Lists</a></li>
-          <li class="nav-text"><a class="nav-links" href="#lists">Lists</a></li>
-          <li class="nav-text"><a class="nav-links" href="#lists">Lists</a></li>
-          <li class="nav-text"><a class="nav-links" href="#lists">Lists</a></li>
-          <li class="nav-text"><a class="nav-links" href="#lists">Lists</a></li>
-          <li class="nav-text"><a class="nav-links" href="#lists">Lists</a></li>
-          <li class="nav-text"><a class="nav-links" href="#lists">Lists</a></li>
+          <li class="nav-text">
+            <a class="nav-links" href="#lists">Navabr</a>
+          </li>
+          <li class="nav-text"><a class="nav-links" href="#lists">Modal</a></li>
+          <li class="nav-text"><a class="nav-links" href="#lists">Modal</a></li>
+          <li class="nav-text"><a class="nav-links" href="#lists">Modal</a></li>
         </ul>
       </aside>
 
@@ -764,6 +760,36 @@
             </iframe>
           </div>
         </section>
+        <section id="modal" class="m-v-3">
+          <h3 class="heading-3 t-c-3">Modal Component</h3>
+          <div class="centered-row space-around-row component-border p-4">
+            <button class="btn btn-custom m-h-3 t-c-1 modal-button">
+              show
+            </button>
+          </div>
+        </section>
+      </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal-overlay modal-container z-index-x-l">
+      <div class="modal">
+        <i class="fa fa-times close-icon close-modal"></i>
+        <div class="modal-header p-4">
+          <h3 class="heading-3">Modal Header</h3>
+        </div>
+        <div class="modal-content p-8">
+          <p class="heading-4">Modal Content</p>
+        </div>
+        <div class="modal-button-container p-4">
+          <button
+            class="btn outline-danger m-h-3 t-c-2"
+            id="modal-close-button"
+          >
+            Close
+          </button>
+          <button class="btn btn-danger m-h-3 t-c-1">Save Changes</button>
+        </div>
       </div>
     </div>
     <script src="script.js"></script>
