--- a/index.html
+++ b/index.html
@@ -774,9 +774,9 @@
     <!-- Modal -->
     <div class="modal-overlay modal-container z-index-x-l">
       <div class="modal">
-        <i class="fa fa-times close-icon close-modal"></i>
         <div class="modal-header p-4">
           <h3 class="heading-3">Modal Header</h3>
+          <i class="fa fa-times f-8 close-icon close-modal"></i>
         </div>
         <div class="modal-content p-8">
           <p class="heading-4">Modal Content</p>
