--- a/index.html
+++ b/index.html
@@ -702,6 +702,7 @@
             </iframe>
           </div>
         </section>
+        <!-- Navbar -->
         <section id="navbar" class="m-v-3">
           <h3 class="heading-3 t-c-3">Navbar Component</h3>
           <div class="component-border p-4">
@@ -760,18 +761,58 @@
             </iframe>
           </div>
         </section>
+
+        <!-- Modal -->
         <section id="modal" class="m-v-3">
           <h3 class="heading-3 t-c-3">Modal Component</h3>
           <div class="centered-row space-around-row component-border p-4">
             <button class="btn btn-custom m-h-3 t-c-1 modal-button">
-              show
+              show modal
+            </button>
+          </div>
+          <div class="code-snippet centered-row">
+            <iframe
+              src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=vscode&wt=sharp&l=auto&width=429&ds=false&dsyoff=20px&dsblur=81px&wc=true&wa=true&pv=65px&ph=38px&ln=false&fl=1&fm=Hack&fs=14px&lh=111%25&si=false&es=2x&wm=false&code=%253Cbutton%2520class%253D%2522btn%2520btn-custom%2520m-h-3%2520t-c-1%2520modal-button%2522%253E%250A%2520show%2520modal%250A%253C%252Fbutton%253E%250A%253Cdiv%2520class%253D%2522modal-overlay%2520modal-container%2520z-index-x-l%2522%253E%250A%253Cdiv%2520class%253D%2522modal%2522%253E%250A%253Cdiv%2520class%253D%2522modal-header%2520p-4%2522%253E%250A%253Ch3%2520class%253D%2522heading-3%2522%253EModal%2520Header%253C%252Fh3%253E%250A%253Ci%2520class%253D%2522fa%2520fa-times%2520f-8%2520close-icon%2520close-modal%2522%253E%253C%252Fi%253E%250A%253C%252Fdiv%253E%250A%253Cdiv%2520class%253D%2522modal-content%2520p-8%2522%253E%250A%253Cp%2520class%253D%2522heading-4%2522%253EModal%2520Content%253C%252Fp%253E%250A%253C%252Fdiv%253E%250A%253Cdiv%2520class%253D%2522modal-button-container%2520p-4%2522%253E%250A%253Cbutton%250Aclass%253D%2522btn%2520outline-danger%2520m-h-3%2520t-c-2%2522%250Aid%253D%2522modal-close-button%2522%250A%253E%250AClose%250A%253C%252Fbutton%253E%250A%253Cbutton%2520class%253D%2522btn%2520btn-danger%2520m-h-3%2520t-c-1%2522%253ESave%2520Changes%253C%252Fbutton%253E%250A%253C%252Fdiv%253E%250A%253C%252Fdiv%253E%250A%253C%252Fdiv%253E%250A%250A%252F%252F%2520JS%250Aconst%2520modal%2520%253D%2520document.querySelector%28%27.modal-overlay%27%29%253B%250Aconst%2520modalShow%2520%253D%2520document.querySelector%28%27.show-modal%27%29%253B%250Aconst%2520modalClose%2520%253D%2520document.querySelector%28%27.close-modal%27%29%253B%250Aconst%2520modalButton%2520%253D%2520document.querySelector%28%27.modal-button%27%29%253B%250Aconst%2520modalCloseButton%2520%253D%2520document.getElementById%28%27modal-close-button%27%29%253B%250A%250Afunction%2520showModal%28%29%2520%257B%250A%2520%2520modal.classList.add%28%27show-modal%27%29%253B%250A%257D%250A%250AmodalButton.addEventListener%28%27click%27%252C%2520showModal%29%253B%250A%250AmodalCloseButton.addEventListener%28%27click%27%252C%2520%28%29%2520%253D%253E%2520%257B%250A%2520%2520modal.classList.remove%28%27show-modal%27%29%253B%250A%257D%29%253B%250A%250AmodalClose.addEventListener%28%27click%27%252C%2520%28%29%2520%253D%253E%2520%257B%250A%2520%2520modal.classList.remove%28%27show-modal%27%29%253B%250A%257D%29%253B"
+              style="
+                width: 100%;
+                height: 400px;
+                border: 0;
+                transform: scale(1);
+                overflow: hidden;
+              "
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
+        </section>
+
+        <!-- SnackBar -->
+        <section id="snackbar" class="m-v-3">
+          <h3 class="heading-3 t-c-3">SnackBar Component</h3>
+          <div class="centered-row space-around-row component-border p-4">
+            <button class="btn btn-custom m-h-3 t-c-1 snackbar-button">
+              show snackbar
             </button>
           </div>
         </section>
+        <div class="code-snippet centered-row">
+          <iframe
+            src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=vscode&wt=sharp&l=auto&width=429&ds=false&dsyoff=20px&dsblur=81px&wc=true&wa=true&pv=65px&ph=38px&ln=false&fl=1&fm=Hack&fs=14px&lh=111%25&si=false&es=2x&wm=false&code=%253Cbutton%2520class%253D%2522btn%2520btn-custom%2520m-h-3%2520t-c-1%2520snackbar-button%2522%253E%250Ashow%2520snackbar%250A%253C%252Fbutton%253E%250A%253Cdiv%2520class%253D%2522snack-bar-container%2520p-3%2522%253E%250A%253Cdiv%2520class%253D%2522snack-bar%2522%253E%250A%253Cp%2520class%253D%2522f-5%2522%253ECan%27t%2520send%2520photo.%2520Retry%2520in%25205%2520seconds.%253C%252Fp%253E%250A%253Ca%2520class%253D%2522f-bold%2520t-c-1%2520f-5%2520p-3%2522%2520href%253D%2522%2523%2522%253ERetry%253C%252Fa%253E%250A%253Cbutton%2520class%253D%2522close%2520p-4%2520f-4%2522%253E%253Ci%2520class%253D%2522fas%2520fa-times%2520f-5%2522%253E%253C%252Fi%253E%253C%252Fbutton%253E%250A%253C%252Fdiv%253E%250A%253C%252Fdiv%253E%250A%250A%252F%252F%2520JS%250Alet%2520showSnackBarButton%2520%253D%2520document.querySelector%28%27.snackbar-button%27%29%253B%250Alet%2520closeSnackBarButton%2520%253D%2520document.querySelector%28%27.close%27%29%253B%250Alet%2520snackBar%2520%253D%2520document.querySelector%28%27.snack-bar-container%27%29%253B%250A%250A%252F%252F%2520Snackbar%250AsnackBar.hidden%2520%253D%2520true%253B%250A%250Aconst%2520openBar%2520%253D%2520%28%29%2520%253D%253E%2520%257B%250A%2520%2520snackBar.hidden%2520%253D%2520false%253B%250A%257D%253B%250A%250Aconst%2520closeBar%2520%253D%2520%28%29%2520%253D%253E%2520%257B%250A%2520%2520snackBar.hidden%2520%253D%2520true%253B%250A%257D%253B%250A%250A%252F%252F%2520snackbar%2520event%2520handlers%250AcloseSnackBarButton.addEventListener%28%27click%27%252C%2520closeBar%29%253B%250AshowSnackBarButton.addEventListener%28%27click%27%252C%2520openBar%29%253B"
+            style="
+              width: 100%;
+              height: 400px;
+              border: 0;
+              transform: scale(1);
+              overflow: hidden;
+            "
+            sandbox="allow-scripts allow-same-origin"
+          >
+          </iframe>
+        </div>
       </div>
     </div>
 
-    <!-- Modal -->
+    <!-- Modal (outside document flow) -->
     <div class="modal-overlay modal-container z-index-x-l">
       <div class="modal">
         <div class="modal-header p-4">
@@ -792,6 +833,17 @@
         </div>
       </div>
     </div>
+    <!-- Modal  End -->
+
+    <!-- snackbar component -->
+    <div class="snack-bar-container p-3">
+      <div class="snack-bar">
+        <p class="f-5">Can't send photo. Retry in 5 seconds.</p>
+        <a class="f-bold t-c-1 f-5 p-3" href="#">Retry</a>
+        <button class="close p-4 f-4"><i class="fas fa-times f-5"></i></button>
+      </div>
+    </div>
+    <!-- SnackBar Component End -->
     <script src="script.js"></script>
   </body>
 </html>
