--- a/index.html
+++ b/index.html
@@ -65,11 +65,14 @@
           </li>
           <li class="nav-text"><a class="nav-links" href="#lists">Lists</a></li>
           <li class="nav-text">
-            <a class="nav-links" href="#lists">Navabr</a>
+            <a class="nav-links" href="#navbar">Navabr</a>
           </li>
-          <li class="nav-text"><a class="nav-links" href="#lists">Modal</a></li>
-          <li class="nav-text"><a class="nav-links" href="#lists">Modal</a></li>
-          <li class="nav-text"><a class="nav-links" href="#lists">Modal</a></li>
+          <li class="nav-text"><a class="nav-links" href="#modal">Modal</a></li>
+          <li class="nav-text"><a class="nav-links" href="#snackbar">SnackBar</a></li>
+          <li class="nav-text"><a class="nav-links" href="#rating">Rating</a></li>
+          <li class="nav-text"><a class="nav-links" href="#grid">Grids</a></li>
+          <li class="nav-text"><a class="nav-links" href="#grid">Grids</a></li>
+
         </ul>
       </aside>
 
@@ -84,7 +87,7 @@
               As <span class="t-c-3">Cerebrum</span> is the most important part
               of the brain and so are your components. The
               <span class="t-c-3">Cerebrum</span>
-              is the thinking part of the brain and with this UI we also do the
+              is the thinking part of the brain and with this component library we also do the
               thinking for the user so that you can build your webapps faster.
               <br />
               <br />
@@ -113,6 +116,7 @@
         <!-- avatar -->
         <section id="avatar" class="m-v-5">
           <h3 class="heading-3 t-c-3">Avatar Component</h3>
+          <p class="f-7 l-h-4">An avatar is an icon or figure representing a person in a profile section or chat screens.</p>
           <div class="centered-row space-around-row component-border p-4">
             <img
               src="https://images.unsplash.com/photo-1580518324671-c2f0833a3af3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80"
@@ -157,6 +161,7 @@
         <!-- alert component -->
         <section id="alert" class="m-v-5">
           <h3 class="heading-3 t-c-3">Alert Component</h3>
+          <p class="f-7 l-h-4">An alert displays a short, important message in a way that attracts the user's attention without interrupting the user's task.</p>
           <div class="centered-row space-around-row component-border p-4">
             <div
               class="alert alert-red p-h-4 m-4 round-corner box-shadow-light"
@@ -201,6 +206,7 @@
 
         <section id="badge" class="m-v-3">
           <h3 class="heading-3 t-c-3">Badge Component</h3>
+          <p class="f-7 l-h-4">Badge generates a small badge to the top-right of its child.</p>
           <div class="centered-row space-around-row component-border p-4">
             <div class="badge-wrapper">
               <img
@@ -269,6 +275,8 @@
         <!-- buttons -->
         <section id="button" class="m-v-5 p-v-5">
           <h3 class="heading-3 t-c-3">Button Component</h3>
+          <p class="f-7 l-h-4">Buttons allow users to take actions, and make choices, with a single tap.
+          </p>
           <div class="centered-row space-around-row component-border p-4">
             <button class="btn btn-primary m-h-3 t-c-1">Default</button>
             <button class="btn btn-accent m-h-3 t-c-1">Accent</button>
@@ -305,6 +313,8 @@
         <section id="card" class="m-v-3">
           <!-- card with badge -->
           <h3 class="heading-3 t-c-3">Card Component</h3>
+          <p class="f-7 l-h-4">Cards contain content and actions about a single subject.
+          </p>
           <div class="centered-row space-around-row component-border p-4">
             <article class="card-container m-4">
               <figure class="card-image-container">
@@ -453,6 +463,7 @@
 
         <section id="image" class="m-v-3">
           <h3 class="heading-3 t-c-3">Responsive Images</h3>
+          <p class="f-7 l-h-4">An image is the primary focus for a website and it should be responsive.</p>
           <div class="centered-row space-around-row component-border p-4">
             <div class="image-container">
               <img
@@ -490,6 +501,7 @@
         <!-- input component -->
         <section id="input" class="m-v-4">
           <h3 class="heading-3 t-c-3">Input Component</h3>
+          <p class="f-7 l-h-4">Reusable input components to take input from the user.</p>
           <div class="centered-row space-around-row component-border p-4">
             <h3 class="heading-3 t-c-3">Textbox</h3>
             <div class="textbox-container">
@@ -596,6 +608,7 @@
         <!-- Text Utility Classes -->
         <section id="text-utils" class="m-v-3">
           <h3 class="heading-3 t-c-3">Text Utilities</h3>
+          <p class="f-7 l-h-4">Reusable Text Utilities to use in your application.</p>
           <div class="centered-row space-around-row component-border p-4 m-v-4">
             <h3 class="heading-3 t-c-3">Primary Color Heading</h3>
             <p class="heading-1">Heading-1</p>
@@ -643,6 +656,7 @@
         <!-- Lists -->
         <section id="lists" class="m-v-3">
           <h3 class="heading-3 t-c-3">Lists</h3>
+          <p class="f-7 l-h-4">Reusable List items to show list to the user.</p>
           <div class="centered-row space-around-row component-border p-4">
             <h3 class="heading-4 t-c-3">Stacked Inline List</h3>
             <ul>
@@ -705,6 +719,7 @@
         <!-- Navbar -->
         <section id="navbar" class="m-v-3">
           <h3 class="heading-3 t-c-3">Navbar Component</h3>
+          <p class="f-7 l-h-4">Navbar helps the user to navigate around the site.</p>
           <div class="component-border p-4">
             <header class="main-head">
               <nav class="nav-component">
@@ -765,6 +780,7 @@
         <!-- Modal -->
         <section id="modal" class="m-v-3">
           <h3 class="heading-3 t-c-3">Modal Component</h3>
+          <p class="f-7 l-h-4">Modal is used to show a message before taking an action.</p>
           <div class="centered-row space-around-row component-border p-4">
             <button class="btn btn-custom m-h-3 t-c-1 modal-button">
               show modal
@@ -789,6 +805,7 @@
         <!-- SnackBar -->
         <section id="snackbar" class="m-v-3">
           <h3 class="heading-3 t-c-3">SnackBar Component</h3>
+          <p class="f-7 l-h-4">SnackBar is used to show error message without disrupting the whole UI.</p>
           <div class="centered-row space-around-row component-border p-4">
             <button class="btn btn-custom m-h-3 t-c-1 snackbar-button">
               show snackbar
@@ -808,6 +825,87 @@
             sandbox="allow-scripts allow-same-origin"
           >
           </iframe>
+        </div>
+
+        <!-- Rating (for E-commerce) -->
+        <section id="rating" class="m-v-3">
+          <h3 class="heading-3 t-c-3">Rating Component</h3>
+          <p class="f-7 l-h-4">It is used to rate the quality of the product</p>
+          <div class="centered-row space-around-row component-border p-4">
+            <h3 class="heading-4 rating-heading t-c-3">Read Only Rating</h3>
+            <div class="read-only-wrapper flex">
+              <div class="read-only-rating p-4"></div>
+              <div class="read-only-rating p-4"></div>
+              <div class="read-only-rating p-4"></div>
+              <div class="read-only-rating empty p-4"></div>
+              <div class="read-only-rating empty p-4"></div>
+            </div>
+            <h3 class="heading-4 rating-heading t-c-3">Interactive Rating</h3>
+            <div class="interactive-wrapper flex p-3">
+                <i class="rating__star far fa-star "></i>
+                <i class="rating__star far fa-star "></i>
+                <i class="rating__star far fa-star "></i>
+                <i class="rating__star far fa-star "></i>
+                <i class="rating__star far fa-star "></i>
+                <span class="rating__result f-8 t-c-3 p-h-4"></span> 
+          </div>
+        </section>
+        <div class="code-snippet centered-row">
+          <iframe
+          src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=vscode&wt=sharp&l=auto&width=429&ds=false&dsyoff=20px&dsblur=81px&wc=true&wa=true&pv=65px&ph=38px&ln=false&fl=1&fm=Hack&fs=14px&lh=111%25&si=false&es=2x&wm=false&code=%252F%252F%2520Read%2520Only%2520Rating%250A%250A%253Cdiv%2520class%253D%2522read-only-wrapper%2520flex%2522%253E%250A%253Cdiv%2520class%253D%2522read-only-rating%2520p-4%2522%253E%253C%252Fdiv%253E%250A%253Cdiv%2520class%253D%2522read-only-rating%2520p-4%2522%253E%253C%252Fdiv%253E%250A%253Cdiv%2520class%253D%2522read-only-rating%2520p-4%2522%253E%253C%252Fdiv%253E%250A%253Cdiv%2520class%253D%2522read-only-rating%2520empty%2520p-4%2522%253E%253C%252Fdiv%253E%250A%253Cdiv%2520class%253D%2522read-only-rating%2520empty%2520p-4%2522%253E%253C%252Fdiv%253E%250A%253C%252Fdiv%253E%250A%250A%252F%252F%2520Interactive%2520Rating%250A%250A%253Cdiv%2520class%253D%2522interactive-wrapper%2520flex%2520p-3%2522%253E%250A%253Ci%2520class%253D%2522rating__star%2520far%2520fa-star%2520%2522%253E%253C%252Fi%253E%250A%253Ci%2520class%253D%2522rating__star%2520far%2520fa-star%2520%2522%253E%253C%252Fi%253E%250A%253Ci%2520class%253D%2522rating__star%2520far%2520fa-star%2520%2522%253E%253C%252Fi%253E%250A%253Ci%2520class%253D%2522rating__star%2520far%2520fa-star%2520%2522%253E%253C%252Fi%253E%250A%253Ci%2520class%253D%2522rating__star%2520far%2520fa-star%2520%2522%253E%253C%252Fi%253E%250A%253Cspan%2520class%253D%2522rating__result%2520f-8%2520t-c-3%2520p-h-4%2522%253E%253C%252Fspan%253E%2520%250A%253C%252Fdiv%253E"            style="
+              width: 100%;
+              height: 400px;
+              border: 0;
+              transform: scale(1);
+              overflow: hidden;
+            "
+            sandbox="allow-scripts allow-same-origin"
+          >
+          </iframe>
+        </div>
+        <h3 class="heading-3 center-text t-c-3">Javascript</h3>
+        <div class="code-snippet centered-row">
+          <iframe
+  src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=vscode&wt=sharp&l=auto&width=429&ds=false&dsyoff=20px&dsblur=81px&wc=true&wa=true&pv=65px&ph=38px&ln=false&fl=1&fm=Hack&fs=14px&lh=111%25&si=false&es=2x&wm=false&code=%252F%252F%2520rating%250Aconst%2520ratingStars%2520%253D%2520%255B...document.getElementsByClassName%28%27rating__star%27%29%255D%253B%250Aconst%2520ratingResult%2520%253D%2520document.querySelector%28%27.rating__result%27%29%253B%250A%250AprintRatingResult%28ratingResult%29%253B%250A%250Afunction%2520executeRating%28stars%252C%2520result%29%2520%257B%250A%2520%2520const%2520starClassActive%2520%253D%2520%27rating__star%2520fas%2520fa-star%27%253B%250A%2520%2520const%2520starClassUnactive%2520%253D%2520%27rating__star%2520far%2520fa-star%27%253B%250A%2520%2520const%2520starsLength%2520%253D%2520stars.length%253B%250A%2520%2520let%2520i%253B%250A%2520%2520stars.map%28star%2520%253D%253E%2520%257B%250A%2520%2520%2520%2520star.onclick%2520%253D%2520%28%29%2520%253D%253E%2520%257B%250A%2520%2520%2520%2520%2520%2520i%2520%253D%2520stars.indexOf%28star%29%253B%250A%250A%2520%2520%2520%2520%2520%2520if%2520%28star.className.indexOf%28starClassUnactive%29%2520%21%253D%253D%2520-1%29%2520%257B%250A%2520%2520%2520%2520%2520%2520%2520%2520printRatingResult%28result%252C%2520i%2520%252B%25201%29%253B%250A%2520%2520%2520%2520%2520%2520%2520%2520for%2520%28i%253B%2520i%2520%253E%253D%25200%253B%2520--i%29%2520stars%255Bi%255D.className%2520%253D%2520starClassActive%253B%250A%2520%2520%2520%2520%2520%2520%257D%2520else%2520%257B%250A%2520%2520%2520%2520%2520%2520%2520%2520printRatingResult%28result%252C%2520i%29%253B%250A%2520%2520%2520%2520%2520%2520%2520%2520for%2520%28i%253B%2520i%2520%253C%2520starsLength%253B%2520%252B%252Bi%29%2520stars%255Bi%255D.className%2520%253D%2520starClassUnactive%253B%250A%2520%2520%2520%2520%2520%2520%257D%250A%2520%2520%2520%2520%257D%253B%250A%2520%2520%257D%29%253B%250A%257D%250A%250Afunction%2520printRatingResult%28result%252C%2520num%2520%253D%25200%29%2520%257B%250A%2520%2520result.textContent%2520%253D%2520%2560%2524%257Bnum%257D%2560%253B%250A%257D%250A%250AexecuteRating%28ratingStars%252C%2520ratingResult%29%253B"
+  style="width: 100%; height: auto; border:0; transform: scale(1); overflow:hidden;"
+  sandbox="allow-scripts allow-same-origin">
+</iframe>
+        </div>
+
+        <section id="grid" class="m-v-3">
+          <h3 class="heading-3 t-c-3">Simplified Grids</h3>
+          <p class="f-7 l-h-4">Grids are used to structure the layout of the page.</p>
+          <div class="component-border p-4">
+            <h3 class="heading-3 center-text t-c-3">Two Items in a Grid</h3>
+            <div class="grid-component-container">
+              <div class="f-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit suscipit consequatur recusandae, facere autem ea dolorum accusamus eveniet nulla magni quam? Nemo natus commodi quia dignissimos maxime enim delectus magni aperiam tenetur ipsum provident nulla quidem consectetur corrupti ut neque molestias laborum deleniti dicta, tempora explicabo illo. Consectetur dolore mollitia, </div>
+              <div class="f-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, quo exercitationem in officiis veniam nobis tempora commodi eveniet quam . Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda in expedita aut ad unde maxime laboriosam earum. Unde rem accusamus ipsam vero autem? Maxime quam ipsum, recusandae deserunt sit nemo?</div>
+            </div>
+          </div>
+
+          <div class="component-border p-4 m-v-4">
+            <h3 class="heading-3 t-c-3">Three Items in a Grid</h3>
+            <div class="grid-component-container-2">
+              <div class="grid-item-1 center-text  heading-3">This is heading</div>
+              <aside class="aside">
+                <nav>
+                  <ul>
+                    <li class="f-6">Item 1</li>
+                    <li class="f-6">Item 2</li>
+                    <li class="f-6">Item 3</li>
+                  </ul>
+                </nav>
+              </aside>
+              <div class="grid-item-2 f-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, quo exercitationem in officiis veniam nobis tempora commodi eveniet quam . Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda in expedita aut ad unde maxime laboriosam earum. Unde rem accusamus ipsam vero autem? Maxime quam ipsum, recusandae deserunt sit nemo?</div>
+            </div>
+          </div>
+        </section>
+        <div class="code-snippet centered-row m-v-3">
+          <iframe
+          src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=vscode&wt=sharp&l=htmlmixed&width=429&ds=false&dsyoff=20px&dsblur=81px&wc=true&wa=true&pv=65px&ph=38px&ln=false&fl=1&fm=Hack&fs=14px&lh=111%25&si=false&es=2x&wm=false&code=%253C%21--%2520Two%2520Column%2520Grid%2520--%253E%250A%253Cdiv%2520class%253D%2522grid-component-container%2522%253E%250A%253Cdiv%2520class%253D%2522f-6%2522%253EYour%2520Content%2520%253C%252Fdiv%253E%250A%253Cdiv%2520class%253D%2522f-6%2522%253EYour%2520conten%253C%252Fdiv%253E%250A%253C%252Fdiv%253E%250A%250A%253C%21--%2520Three%2520items%2520Grid%2520--%253E%250A%253Cdiv%2520class%253D%2522grid-component-container-2%2522%253E%250A%253Cdiv%2520class%253D%2522grid-item-1%2520center-text%2520%2520heading-3%2522%253EThis%2520is%2520heading%253C%252Fdiv%253E%250A%253Caside%2520class%253D%2522aside%2522%253E%250A%253Cnav%253E%250A%253Cul%253E%250A%253Cli%2520class%253D%2522f-6%2522%253EItem%25201%253C%252Fli%253E%250A%253Cli%2520class%253D%2522f-6%2522%253EItem%25202%253C%252Fli%253E%250A%253Cli%2520class%253D%2522f-6%2522%253EItem%25203%253C%252Fli%253E%250A%253C%252Ful%253E%250A%253C%252Fnav%253E%250A%253C%252Faside%253E%250A%253Cdiv%2520class%253D%2522grid-item-2%2520f-6%2522%253EYour%2520Content%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
+          style="width: 100%; height: auto; border:0; transform: scale(1); overflow:hidden;"
+          sandbox="allow-scripts allow-same-origin">
+        </iframe>
         </div>
       </div>
     </div>
